dov event drag & drop : fixed block shift

--- a/dom_02/dom_events_task_02/main.css
+++ b/dom_02/dom_events_task_02/main.css
@@ -3,10 +3,6 @@ html, body {
     margin: 0;
 }
 
-.parent-block {
-    position: relative;
-}
-
 .button {
     height: 30px;
     width: 150px;
